--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,19 @@ october_2022 <- get_playlist_audio_features("", "483hVg9hepeZL7JjFXIpMz")
 november_2022 <- get_playlist_audio_features("", "6zYA9NzOPb9nYjV21KNKsD")
 december_2022 <- get_playlist_audio_features("", "5P8jALdx9bXJQMTR0dO5Xd")
 
+january_2023 <- get_playlist_audio_features("", "52Rw1EdQzCpD9SOJltAX9J")
+february_2023 <- get_playlist_audio_features("", "3riZOHbg5ZUsDkxUvcSCGu")
+march_2023 <- get_playlist_audio_features("", "0dRC9C0pYDcpPD0sZDgIyx")
+april_2023 <- get_playlist_audio_features("", "0HcdxosjfoDULOH2jaLQco")
+may_2023 <- get_playlist_audio_features("", "6DsIWTO4w6sG0XMctJrEZG")
+june_2023 <- get_playlist_audio_features("", "4tk4rXKvjZdf3Wu0ycVBwq")
+july_2023 <- get_playlist_audio_features("", "2bIiBvXw5AqtNUoX4w8ipu")
+august_2023 <- get_playlist_audio_features("", "4I7tMDSm9TjrJlkD287uvL")
+september_2023 <- get_playlist_audio_features("", "5SGyoYGEEQnf7KwYNtNGg0")
+october_2023 <- get_playlist_audio_features("", "7vXH5QnB3Dznx8Bs0WoC7f")
+november_2023 <- get_playlist_audio_features("", "7ycXHN80yVV0f4K0XLrfFb")
+december_2023 <- get_playlist_audio_features("", "5zIGaYbfS7krme4GheZP4g")
+
 full_2022 <- bind_rows(
     march_2022 |> mutate(year="2022", month="march"),
     april_2022 |> mutate(year="2022", month="april"),
@@ -41,8 +54,147 @@ full_2022 <- bind_rows(
     december_2022 |> mutate(year="2022", month="december")
 )
 
+full_2023 <- bind_rows(
+    january_2023 |> mutate(year="2023", month="january"),
+    february_2023 |> mutate(year="2023", month="february"),
+    march_2023 |> mutate(year="2023", month="march"),
+    april_2023 |> mutate(year="2023", month="april"),
+    may_2023 |> mutate(year="2023", month="may"),
+    june_2023 |> mutate(year="2023", month="june"),
+    july_2023 |> mutate(year="2023", month="july"),
+    august_2023 |> mutate(year="2023", month="august"),
+    september_2023 |> mutate(year="2023", month="september"),
+    october_2023 |> mutate(year="2023", month="october"),
+    november_2023 |> mutate(year="2023", month="november"),
+    december_2023 |> mutate(year="2023", month="december")
+)
+
+combined_data <- bind_rows(
+  mutate(full_2022, year = 2022),
+  mutate(full_2023, year = 2023)
+)
+
 full_2022
+full_2023
 ```
+
+# Chordogram?
+
+```{r}
+circshift <- function(v, n) {
+  if (n == 0) v else c(tail(v, n), head(v, -n))
+}
+
+#      C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B
+major_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
+minor_chord <-
+  c(   1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
+seventh_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
+
+major_key <-
+  c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
+minor_key <-
+  c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
+
+chord_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:7", circshift(seventh_chord, 6),
+    "Gb:maj", circshift(major_chord, 6),
+    "Bb:min", circshift(minor_chord, 10),
+    "Db:maj", circshift(major_chord, 1),
+    "F:min", circshift(minor_chord, 5),
+    "Ab:7", circshift(seventh_chord, 8),
+    "Ab:maj", circshift(major_chord, 8),
+    "C:min", circshift(minor_chord, 0),
+    "Eb:7", circshift(seventh_chord, 3),
+    "Eb:maj", circshift(major_chord, 3),
+    "G:min", circshift(minor_chord, 7),
+    "Bb:7", circshift(seventh_chord, 10),
+    "Bb:maj", circshift(major_chord, 10),
+    "D:min", circshift(minor_chord, 2),
+    "F:7", circshift(seventh_chord, 5),
+    "F:maj", circshift(major_chord, 5),
+    "A:min", circshift(minor_chord, 9),
+    "C:7", circshift(seventh_chord, 0),
+    "C:maj", circshift(major_chord, 0),
+    "E:min", circshift(minor_chord, 4),
+    "G:7", circshift(seventh_chord, 7),
+    "G:maj", circshift(major_chord, 7),
+    "B:min", circshift(minor_chord, 11),
+    "D:7", circshift(seventh_chord, 2),
+    "D:maj", circshift(major_chord, 2),
+    "F#:min", circshift(minor_chord, 6),
+    "A:7", circshift(seventh_chord, 9),
+    "A:maj", circshift(major_chord, 9),
+    "C#:min", circshift(minor_chord, 1),
+    "E:7", circshift(seventh_chord, 4),
+    "E:maj", circshift(major_chord, 4),
+    "G#:min", circshift(minor_chord, 8),
+    "B:7", circshift(seventh_chord, 11),
+    "B:maj", circshift(major_chord, 11),
+    "D#:min", circshift(minor_chord, 3)
+  )
+
+key_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:maj", circshift(major_key, 6),
+    "Bb:min", circshift(minor_key, 10),
+    "Db:maj", circshift(major_key, 1),
+    "F:min", circshift(minor_key, 5),
+    "Ab:maj", circshift(major_key, 8),
+    "C:min", circshift(minor_key, 0),
+    "Eb:maj", circshift(major_key, 3),
+    "G:min", circshift(minor_key, 7),
+    "Bb:maj", circshift(major_key, 10),
+    "D:min", circshift(minor_key, 2),
+    "F:maj", circshift(major_key, 5),
+    "A:min", circshift(minor_key, 9),
+    "C:maj", circshift(major_key, 0),
+    "E:min", circshift(minor_key, 4),
+    "G:maj", circshift(major_key, 7),
+    "B:min", circshift(minor_key, 11),
+    "D:maj", circshift(major_key, 2),
+    "F#:min", circshift(minor_key, 6),
+    "A:maj", circshift(major_key, 9),
+    "C#:min", circshift(minor_key, 1),
+    "E:maj", circshift(major_key, 4),
+    "G#:min", circshift(minor_key, 8),
+    "B:maj", circshift(major_key, 11),
+    "D#:min", circshift(minor_key, 3)
+  )
+
+bodysnatchers <-
+  get_tidy_audio_analysis("4pWIwnnqx8k01fuF95UMIg") |>
+  compmus_align(sections, segments) |>
+  select(sections) |>
+  unnest(sections) |>
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "mean", norm = "manhattan"
+      )
+  )
+
+bodysnatchers |> 
+  compmus_match_pitch_template(
+    key_templates,         # Change to chord_templates if descired
+    method = "euclidean",  # Try different distance metrics
+    norm = "manhattan"     # Try different norms
+  ) |>
+  ggplot(
+    aes(x = start + duration / 2, width = duration, y = name, fill = d)
+  ) +
+  geom_tile() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "")
+```
+
 
 # First Things First
 
@@ -90,7 +242,107 @@ In the following plots, you'll be able to see the characteristics of the music I
 
 ### Introduction
 
-In due time I will introduce and explain every visualization on this page. Stay tuned!
+#### Loudness
+
+```{r}
+
+month_order <- c("january", "february", "march", "april", "may", "june", "july", "august", "september", "october", "november", "december")
+
+# Group by year and month, and calculate mean valence
+loudness_by_year_month <- combined_data %>%
+  group_by(year, month) %>%
+  summarize(mean_loudness = mean(loudness, na.rm = TRUE)) %>%
+  ungroup()
+
+# Convert "month" to a factor with the desired order
+loudness_by_year_month$month <- factor(loudness_by_year_month$month, levels = month_order)
+
+# Plot mean valence by year and month
+ggplot(loudness_by_year_month, aes(x = month, y = mean_loudness, fill = factor(year))) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Mean Loudness by Year and Month (2022-2023)",
+       x = "Month",
+       y = "Mean Loudness",
+       fill = "Year") +
+  theme_minimal() +
+  theme(legend.position = "top", 
+        axis.text.x = element_text(angle = 45, hjust = 1))
+
+# # Identify top N songs with the highest valence for each month and year
+# top_n_loudness_songs_by_year <- combined_data %>%
+#   group_by(year, month) %>%
+#   slice_max(order_by = loudness, n = 1) %>%
+#   select(year, month, track.name, loudness)
+# 
+# # Display the top N songs with the highest valence from every month and year
+# print(top_n_loudness_songs_by_year)
+```
+
+#### Valence 
+
+```{r}
+# Group by year and month, and calculate mean valence
+valence_by_year_month <- combined_data %>%
+  group_by(year, month) %>%
+  summarize(mean_valence = mean(valence, na.rm = TRUE)) %>%
+  ungroup()
+
+# Convert "month" to a factor with the desired order
+valence_by_year_month$month <- factor(valence_by_year_month$month, levels = month_order)
+
+# Plot mean valence by year and month
+ggplot(valence_by_year_month, aes(x = month, y = mean_valence, fill = factor(year))) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Mean Valence by Year and Month (2022-2023)",
+       x = "Month",
+       y = "Mean Valence",
+       fill = "Year") +
+  theme_minimal() +
+  theme(legend.position = "top", 
+        axis.text.x = element_text(angle = 45, hjust = 1))
+
+# # Identify top N songs with the highest valence for each month and year
+# top_n_valence_songs_by_year <- combined_data %>%
+#   group_by(year, month) %>%
+#   slice_max(order_by = valence, n = 1) %>%
+#   select(year, month, track.name, valence)
+# 
+# # Display the top N songs with the highest valence from every month and year
+# print(top_n_valence_songs_by_year)
+```
+
+#### Popularity 
+
+```{r}
+# Group by year and month, and calculate mean valence
+popularity_by_year_month <- combined_data %>%
+  group_by(year, month) %>%
+  summarize(mean_popularity = mean(track.popularity, na.rm = TRUE)) %>%
+  ungroup()
+
+# Convert "month" to a factor with the desired order
+popularity_by_year_month$month <- factor(popularity_by_year_month$month, levels = month_order)
+
+# Plot mean valence by year and month
+ggplot(popularity_by_year_month, aes(x = month, y = mean_popularity, fill = factor(year))) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Mean Popularity by Year and Month (2022-2023)",
+       x = "Month",
+       y = "Mean Popularity",
+       fill = "Year") +
+  theme_minimal() +
+  theme(legend.position = "top", 
+        axis.text.x = element_text(angle = 45, hjust = 1))
+
+# # Identify top N songs with the highest valence for each month and year
+# top_n_popularity_songs_by_year <- combined_data %>%
+#   group_by(year, month) %>%
+#   slice_max(order_by = track.popularity, n = 1) %>%
+#   select(year, month, track.name, track.popularity)
+# 
+# # Display the top N songs with the highest valence from every month and year
+# print(top_n_popularity_songs_by_year)
+```
 
 ### March 2022
 
