--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,9 @@ library(plotly)
 library(ggrepel)
 library(compmus)
 library(purrr)
+library(htmlwidgets)
+library(highcharter)
+
 
 options(knitr.duplicate.label = "allow")
 ```
@@ -167,8 +170,8 @@ key_templates <-
     "D#:min", circshift(minor_key, 3)
   )
 
-bodysnatchers <-
-  get_tidy_audio_analysis("4pWIwnnqx8k01fuF95UMIg") |>
+present <-
+  get_tidy_audio_analysis("7KHQtpLpoIV3Wfu22YQT8y") |>
   compmus_align(sections, segments) |>
   select(sections) |>
   unnest(sections) |>
@@ -180,7 +183,7 @@ bodysnatchers <-
       )
   )
 
-bodysnatchers |> 
+present |> 
   compmus_match_pitch_template(
     key_templates,         # Change to chord_templates if descired
     method = "euclidean",  # Try different distance metrics
@@ -195,18 +198,16 @@ bodysnatchers |>
   labs(x = "Time (s)", y = "")
 ```
 
-
 # First Things First
 
 ## Inputs {.sidebar}
 
-This is supposed to be my introductory page, but I kind of changed around my corpus a bit, so I'll have to rewrite this as well. Stay tuned! 
+This is supposed to be my introductory page, but I kind of changed around my corpus a bit, so I'll have to rewrite this as well. Stay tuned!
 
-Column 
--------------------------------------
-    
+## Column
+
 #### In Rainbows
-    
+
 ```{r picture, echo = F, fig.cap = "Radiohead", out.width = '100%'}
 knitr::include_graphics("1f3fcd1922743e6f9159a9ccdf1dbdd9.1000x1000x1.png")
 ```
@@ -217,20 +218,19 @@ knitr::include_graphics("1f3fcd1922743e6f9159a9ccdf1dbdd9.1000x1000x1.png")
 knitr::include_graphics("1f3fcd1922743e6f9159a9ccdf1dbdd9.1000x1000x1.png")
 ```
 
-Column
--------------------------------------
-   
+## Column
+
 #### In Rainbows
 
 ```{r picture3, echo = F, fig.cap = "Radiohead 3", out.width = '100%'}
 knitr::include_graphics("1f3fcd1922743e6f9159a9ccdf1dbdd9.1000x1000x1.png")
 ```
- 
+
 #### In Rainbows
 
 ```{r picture4, echo = F, fig.cap = "Radiohead 4", out.width = '100%'}
 knitr::include_graphics("1f3fcd1922743e6f9159a9ccdf1dbdd9.1000x1000x1.png")
-```   
+```
 
 # What a poser.
 
@@ -269,9 +269,9 @@ ggplot(loudness_by_year_month, aes(x = month, y = mean_loudness, fill = factor(y
         axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
-On average, I listened to louder music in 2022 than 2023. In the months of April, July, and November we can find the highest difference between loudness in 2022 and 2023, so let's take a look at some songs of that period. 
+On average, I listened to louder music in 2022 than 2023. In the months of April, July, and November we can find the highest difference between loudness in 2022 and 2023, so let's take a look at some songs of that period.
 
-#### Valence 
+#### Valence
 
 ```{r}
 # Group by year and month, and calculate mean valence
@@ -295,9 +295,9 @@ ggplot(valence_by_year_month, aes(x = month, y = mean_valence, fill = factor(yea
         axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
-There seems to be a pattern of growth in the valence of the songs I discovered over time, with an apparent peak in the summer months. Could this correlate with the nice weather that's common in those months or is this simply a coincidence? 
+There seems to be a pattern of growth in the valence of the songs I discovered over time, with an apparent peak in the summer months. Could this correlate with the nice weather that's common in those months or is this simply a coincidence?
 
-#### Popularity 
+#### Popularity
 
 ```{r, results='hide'}
 # Group by year and month, and calculate mean valence
@@ -326,22 +326,42 @@ I view the popularity of a song as a particularly telling attribute, as it's sig
 ### March 2022
 
 ```{r, results='hide'}
-march_2023_data <- combined_data %>% filter(year == 2023, month == "march")
-
-# Select the top 5 loudest songs in March 2023
-top5_loudest_march_2023 <- march_2023_data %>%
-  arrange(desc(loudness)) %>%
-  head(5)
-
-# Convert "track.name" to a factor with the desired order
-top5_loudest_march_2023$track.name <- factor(top5_loudest_march_2023$track.name, levels = top5_loudest_march_2023$track.name)
-
-plot <- plot_ly(data = top5_loudest_march_2023, x = ~track.name, y = ~loudness,
-        type = "scatter", mode = "markers+text", marker = list(size = 10)) %>%
-  layout(title = "Top 5 Loudest Songs of March 2023",
-         yaxis = list(title = "Loudness"),
-         legend = list(title = "Year"),
-         hovermode = "closest")
+plot <- march_2022 |>                    
+  mutate(
+    mode = ifelse(mode == 0, "Minor", "Major")
+  ) |>
+  ggplot(                     
+    aes(
+      x = valence,
+      y = energy,
+      size = loudness,
+      colour = track.popularity
+    )
+  ) +
+  geom_point() +              
+  geom_rug(linewidth = 0.1) + 
+  scale_x_continuous(         
+    limits = c(0, 1),
+    breaks = c(0, 0.50, 1),   
+    minor_breaks = NULL       
+  ) +
+  scale_y_continuous(         
+    limits = c(0, 1),
+    breaks = c(0, 0.50, 1),
+    minor_breaks = NULL
+  ) +
+  scale_colour_viridis_c() +
+  scale_size_continuous(
+    trans="exp",
+    guide="none"
+  ) +
+  theme_light() +             
+  labs(                       
+    x = "Valence",
+    y = "Energy",
+    colour = "Popularity",
+    size = "Loudness"
+  )
 
 plot
 ```
